# M2_H10

./: README.md  pyproject.toml
quotes_project/quotes/: urls.py  utils.py  views.py
quotes_project/quotes/templates/quotes/: base.html  index.html
quotes_project/quotes/templatetags/: extract.py
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: urls.py
